# pytest_proj

./: README.md  pyproject.toml  requirements.txt
tests/: test_arrs.py  test_dicts.py  test_dicts_fixtur.py
utils/: __init__.py  arrs.py  dicts.py
