[tool.poetry]
name = "pytest-proj4"
version = "0.1.0"
description = ""
authors = ["Sergey <kapetanvodichka@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj4"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
